Remove animations on GtkComboBox menus, to keep alignment (fixes #6)

--- a/gtk/sass/3.20/_common.scss
+++ b/gtk/sass/3.20/_common.scss
@@ -1392,6 +1392,7 @@ combobox {
   }
 
   > window.popup { // context-menu popup
+    decoration { transition: none; } // do not set transitions
     > menu {
       padding: rem(3.3px) 0;
       transition: none; // do not set transitions
