--- a/gtk/sass/3.22/_common.scss
+++ b/gtk/sass/3.22/_common.scss
@@ -1378,6 +1378,7 @@ combobox {
   }
 
   > window.popup { // context-menu popup
+    decoration { transition: none; } // do not set transitions
     > menu {
       padding: rem(3.3px) 0;
       transition: none; // do not set transitions
